test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-shared.good
init-field-dflt-nonnil-borrowed-from-oknil-shared.chpl:11: error: default-initializing a field with a non-nilable type borrowed MyClass from an instance of nilable shared MyClass?
